--- a/src/components/code/code-css/pages/elem-css.html
+++ b/src/components/code/code-css/pages/elem-css.html
@@ -19,6 +19,7 @@
   <p><a href="#animation">Анимация</a></p>
   <p><a href="#position">Позиционирование</a></p>
   <p><a href="#overflow">Переполнение</a></p>
+  <p><a href="#media">Медиа-запросы</a></p>
 </article>
 
 
@@ -536,5 +537,39 @@ button:hover {
   </ol>
 </article>
 
+
+<!-- Медиа-запросы -->
+<article class="article">
+  <div class="anchor" id="media"></div>
+  <h2>Медиа-запросы</h2>
+
+  <p>Медиа запросы (media queries) позволяют применять разные стили для разных размеров экрана и разных устройств пользователя.</p>
+  <p>Медиа запросы являются неотъемлемой частью адаптивного веб-дизайна, поскольку позволяют изменять макет веб страницы в зависимости от устройства пользователя.</p>
+
+  <h4>Создание медиа запроса</h4>
+  <p>Должно выполняться условие при котором применяются стили, указанные в медиа запросе.</p>
+
+  <p>Цвет текста всех параграфов станет красным, если ширина меньше или равна 500px</p>
+<pre>@media (max-width: 500px) {
+  p {
+    color: red;
+  }
+}</pre>
+
+  <p>Цвет текста всех параграфов станет зеленый, если ширина больше или равна 700px</p>
+<pre>@media (mшт-width: 700px) {
+  p {
+    color: green;
+  }
+}</pre>
+
+  <p>Можно объединять несколько медиа запросов в одном.</p>
+  <p>Для всех устройств имеющих портретную ориентацию и максимальную ширину 480px</p>
+<pre>@media (orientation: portrait) and (max-width: 480px) {
+  .content {
+    width: 100%;
+  }
+}</pre>
+</article>
 
 
