--- a/src/components/code/code-js/js-corejs/pages/elem-date.html
+++ b/src/components/code/code-js/js-corejs/pages/elem-date.html
@@ -6,7 +6,7 @@
   <h2>Содержание</h2>
 
     <p><a href="#links">links</a></p>
-    <p><a href="#about">about</a></p>
+    <p><a href="#create">Создание даты</a></p>
     <p><a href="#methods">Методы объекта Date</a></p>
 </article>
 
@@ -20,16 +20,19 @@
   <p><a href="https://puzzleweb.ru/javascript/obj_date.php">puzzleweb.ru</a> JavaScript объект Date</p>
 </article>
 
-<!-- about -->
+
+<!-- Создание даты -->
 <article class="article">
-  <div class="anchor" id="about"></div>
-  <h2>about</h2>
+  <div class="anchor" id="create"></div>
+  <h2>Создание даты</h2>
 
   <p>Объект Date позволяет работать с датами и временем. Для создания нового объекта Date используется следующий синтаксис:</p>
   <code>new Date();</code>
+  <p>Если конструктор Date вызывается без аргументов, создаётся объект с текущими значениями даты и времени.</p>
   <code>Thu Feb 29 2024 10:10:28 GMT+0300 (Москва, стандартное время)</code>
   <p>Даты хранятся в нём как количество миллисекунд, прошедших с полуночи 1 января 1970 г. согласно единому всемирному времени (UTC). Благодаря такому формату с помощью Date можно точно представлять даты, отстоящие от 1 января 1970 г. на 285616 лет.</p>
-  <p>Если конструктор Date вызывается без аргументов, создаётся объект с текущими значениями даты и времени. Для создания объекта Date с определенной датой или временем, необходимо будет передать один из четырех возможных параметров:</p>
+
+  <p>Для создания объекта Date с определенной датой или временем, необходимо будет передать один из трех возможных параметров:</p>
   <ol>
     <li>миллисекунды: значение должно быть числом миллисекунд с 01.01.1970
       <code>new Date(1700000000000); // 17 и одиннадцать нулей</code>
@@ -39,12 +42,16 @@
       <code>new Date("Februar 29, 2024");</code>
       <code>Thu Feb 29 2024 00:00:00 GMT+0300 (Москва, стандартное время) {}</code>
     </li>
-    <li>год, месяц, день
-      <code>new Date(2024, 1, 29);</code>
-      <code>Thu Feb 29 2024 00:00:00 GMT+0300 (Москва, стандартное время) {}</code>
-      <p>Обратите внимание, что число 4 соответствует маю месяцу. Это значит, что январю соответствует число 0. Аналогичным образом вычисляются и дни, только нулю в этом случае соответствует воскресенье.</p>
-    </li>
-    <li>год, месяц, день, час, минуты, секунды, миллисекунды
+    <li>год, месяц (и опционально день, час, минуты, секунды, миллисекунды)
+      <code>new Date(2024,0)</code>
+      <code>Mon Jan 01 2024 00:00:00 GMT+0300 (Москва, стандартное время)</code>
+      <code>new Date(2024,1,2)</code>
+      <code>Fri Feb 02 2024 00:00:00 GMT+0300 (Москва, стандартное время)</code>
+      <code>new Date(2024,1,2,3)</code>
+      <code>Fri Feb 02 2024 03:00:00 GMT+0300 (Москва, стандартное время)</code>
+      <code>new Date(2024,1,2,3,20)</code>
+      <code>Fri Feb 02 2024 03:20:00 GMT+0300 (Москва, стандартное время)</code>
+      <p>Обратите внимание, что число 4 соответствует маю месяцу. Это значит, что январю соответствует число 0. Аналогичным образом вычисляются и дни недели, только нулю в этом случае соответствует воскресенье.</p>
       <p>При работе с объектом Date важно помнить, что вычисления выполняются с использованием единого всемирного времени (UTC), несмотря на то, что ваш компьютер может отображать время в соответствии с вашей временной зоной.</p>
     </li>
   </ol>
@@ -64,7 +71,10 @@
     <li><a href="#getMinutes">getMinutes</a></li>
     <li><a href="getMonth">getMonth</a></li>
     <li><a href="#getSeconds">getSeconds</a></li>
-    <li><a href="#getTime">getTime</a></li>
+    <li>
+      <a href="#getTime">getTime</a>
+      <code>new Date().getTime() === new Date().valueOf() // true</code>
+    </li>
     <li><a href="#getTimezoneOffset">getTimezoneOffset</a></li>
     <li><a href="#getUTCDate">getUTCDate</a></li>
     <li><a href="#getUTCDay">getUTCDay</a></li>
@@ -105,7 +115,10 @@
     <li><a href="#toTimeString">toTimeString</a></li>
     <li><a href="#toUTCString">toUTCString</a></li>
     <li><a href="#dateUTC">Date.UTC</a></li>
-    <li><a href="#valueOf">valueOf</a></li>
+    <li>
+      <a href="#valueOf">valueOf</a>
+      <code>new Date().getTime() === new Date().valueOf() // true</code>
+    </li>
   </ol>
 </article>
 
