--- a/src/components/code/code-js/js-practice/pages/elem-object.html
+++ b/src/components/code/code-js/js-practice/pages/elem-object.html
@@ -6,11 +6,12 @@
   <h2>Содержание</h2>
 
   <p><a href="#links">links</a></p>
-  <p><a href="#t1">1. Объединить два объекта</a></p>
-  <p><a href="#t2">2. Дан массив двух объектов, вернуть объект со свойствами из этих объектов</a></p>
-  <p><a href="#t3">3. Реализовать свой класс Set</a></p>
-  <p><a href="#t4">4. Дан массив объектов, вернуть строку из свойств value</a></p>
-  <p><a href="#t5">5. Объект со свойствами, зеркальными ключу</a></p>
+  <p><a href="#t1">1. Копирование объекта</a></p>
+  <p><a href="#t2">2. Объединить два объекта</a></p>
+  <p><a href="#t3">3. Дан массив двух объектов, вернуть объект со свойствами из этих объектов</a></p>
+  <p><a href="#t4">4. Реализовать свой класс Set</a></p>
+  <p><a href="#t5">5. Дан массив объектов, вернуть строку из свойств value</a></p>
+  <p><a href="#t6">6. Объект со свойствами, зеркальными ключу</a></p>
 
 </article>
 
@@ -22,10 +23,45 @@
 </article>
 
 
-<!-- 1. Объединить два объекта -->
+<!-- 1. Копирование объекта -->
 <article class="article">
   <div class="anchor" id="t1"></div>
-  <h3>1. Объединить два объекта</h3>
+  <h3>1. Копирование объекта</h3>
+
+  <hr>
+
+  <h3>Поверхностное копирование</h3>
+  <p>Создается новая ссылка на новую область памяти, куда записываются свойства первого уровня старого объекта. Если в нем есть вложенные объекты, то они ссылаются на старые вложенные объекты.</p>
+  <ol>
+    <li>
+      <h4>1 способ. Оператор spread</h4>
+      <code>const obj = {a: 'a'};</code>
+      <code>const newObj = { ...obj };</code>
+    </li>
+    <li>
+      <h4>2 способ. Метод Object.assign()</h4>
+      <code>const obj = {a: 'a'};</code>
+      <code>const newObj = Object.assign({}, obj);</code>
+    </li>
+  </ol>
+
+  <hr>
+
+  <h3>Глубокое копирование</h3>
+  <ol>
+    <li>
+      <h4>1 способ. JSON</h4>
+      <code>const obj = {a: 'a'};</code>
+      <code>const newObj = JSON.parse(JSON.stringify(obj));</code>
+    </li>
+  </ol>
+</article>
+
+
+<!-- 2. Объединить два объекта -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>2. Объединить два объекта</h3>
 
   <p>Нужно объединить два объекта. При этом исходные объекты изменяться не будут. На выходе будем получать новый с объединенными свойствами. Рассмотрим три способа - spread оператор, Object.assign(), конструкцию for in.</p>
 <pre>const a = {
@@ -68,10 +104,10 @@ for (let prop in b) {
 </article>
 
 
-<!-- 2. Дан массив двух объектов, вернуть объект со свойствами из этих объектов -->
+<!-- 3. Дан массив двух объектов, вернуть объект со свойствами из этих объектов -->
 <article class="article">
-  <div class="anchor" id="t2"></div>
-  <h3>2. Дан массив двух объектов, вернуть объект со свойствами из этих объектов</h3>
+  <div class="anchor" id="t3"></div>
+  <h3>3. Дан массив двух объектов, вернуть объект со свойствами из этих объектов</h3>
 
   <p>Написать функцию, которая на вход получает массив объектов</p>
 <pre>let arr = [
@@ -95,10 +131,10 @@ for (let prop in b) {
 </article>
 
 
-<!-- 3. Дан массив двух объектов, вернуть объект со свойствами из этих объектов -->
+<!-- 4. Дан массив двух объектов, вернуть объект со свойствами из этих объектов -->
 <article class="article">
-  <div class="anchor" id="t3"></div>
-  <h3>3. Реализовать свой класс Set</h3>
+  <div class="anchor" id="t4"></div>
+  <h3>4. Реализовать свой класс Set</h3>
 
   <p>Написать свою реализацию класса Set. Если в экземпляр объекта класса Set передать массив, то он оставит у себя только уникальные значения. Реализовать методы add() добавить значение, has() проверить есть ли значение, delete() удалить значение</p>
 
@@ -133,10 +169,10 @@ for (let prop in b) {
 </article>
 
 
-<!-- 4. Дан массив объектов, вернуть строку из свойств value -->
+<!-- 5. Дан массив объектов, вернуть строку из свойств value -->
 <article class="article">
-  <div class="anchor" id="t4"></div>
-  <h3>4. Дан массив объектов, вернуть строку из свойств value</h3>
+  <div class="anchor" id="t5"></div>
+  <h3>5. Дан массив объектов, вернуть строку из свойств value</h3>
 
   <p>Написать функцию, которая принимает массив объектов и возвращает результат следующих условий.</p> 
   <ul>
@@ -194,10 +230,10 @@ for (let prop in b) {
 </article>
 
 
-<!-- 5. Объект со свойствами, зеркальными ключу -->
+<!-- 6. Объект со свойствами, зеркальными ключу -->
 <article class="article">
-  <div class="anchor" id="t5"></div>
-  <h3>5. Объект со свойствами, зеркальными ключу</h3>
+  <div class="anchor" id="t6"></div>
+  <h3>6. Объект со свойствами, зеркальными ключу</h3>
 
   <p>Дан объект со свойствами без значений</p>
 <pre>abc: undefined
