--- a/src/components/code/code-js/js-theory/pages/elem-js.html
+++ b/src/components/code/code-js/js-theory/pages/elem-js.html
@@ -12,12 +12,19 @@
   <div>
     <p><a href="#links">links</a></p>
     <p><a href="#es">ECMAScript</a></p>
-    <p><a href="#keywords">keywords</a></p>
+    <p><a href="#expression">Выражение (expression)</a></p>
+    <p><a href="#variable">Переменная</a></p>
+    <p><a href="#typeof">Типы данных</a></p>
+    <p><a href="#func">Функции</a></p>
+    <p><a href="#error">Обработка ошибок</a></p>
+    <p><a href="#statement">Инструкция (statement)</a></p>
+    <p><a href="#if">Условие (if, switch)</a></p>
+    <p><a href="#for">Цикл (for, while)</a></p>
   </div>
 
 </div>
 
-<!-- links-->
+<!-- links -->
 <article class="article">
   <div class="anchor" id="links"></div>
   <h2>links</h2>
@@ -76,7 +83,7 @@
 </article>
 
 
-<!-- ECMAScript-->
+<!-- ECMAScript -->
 <article class="article">
   <div class="anchor" id="es"></div>
   <h2>ECMAScript Editions</h2>
@@ -193,57 +200,500 @@
 </article>
 
 
-<!-- keywords-->
+<!-- Выражение (expression) -->
 <article class="article">
-  <div class="anchor" id="keywords"></div>
-  <h2>Ключевые слова (keywords) в Javascript</h2>
-  <p>Ключевые слова - это имена (идентификаторы), зарезервированные для специального использования. Ключевые слова нельзя использовать в качестве имен переменных и функций.</p>
+  <div class="anchor" id="expression"></div>
+  <h2>Выражение (expression)</h2>
 
-  <p>В JavaScript существуют следующие ключевые слова (часть из них на самом деле являются ключевыми словами языка Java, а в JavaScript зарезервированы лишь в целях большей совместимости):</p>
+  <p>Выражение всегда возвращает значение.</p>
+  <p>Число это выражение. Если записать число, интерпретатор вернет это число</p>
+  <code>10 // 10</code>
 
-  <div class="flex-keywords">
-    <div>await</div> <div>break</div>	<div>case</div> <div>catch</div>
-    <div>class</div> <div>const</div> <div>continue</div> <div>debugger</div>
-    <div>default</div> <div>delete</div> <div>do</div> <div>else</div> <div>enum</div>
-    <div>export</div>  <div>extends</div> <div>false</div> <div>finally</div>
-    <div>for</div> <div>function</div> <div>if</div> <div>import</div> <div>in</div>        <div>instanceof</div> <div>new</div> <div>null</div> <div>return</div> <div>super</div> <div>switch</div> <div>this</div> <div>throw</div> <div>true</div> <div>try</div>
-    <div>typeof</div> <div>var</div> <div>void</div> <div>while</div> <div>with</div>
-    <div>yield</div>
-  </div>
+  <p>Сложение чисел это выражение. Результатом будет число</p>
+  <code>5 + 2 // 7</code>
 
-  <p>Кроме вышеприведенных ключевых слов, программисту не рекомендуется использовать в качестве имен переменных и функций следующие идентификаторы:</p>
+  <p>Строка это выражение. Если записать строку, интерпретатор вернет эту строку</p>
+  <code>'abc' // 'abc'</code>
 
-  <p>
-    alert  	isNaN  	pageYOffset
-    anchor  	java  	parent
-    area  	JavaArray  	parseFloat
-    array  	JavaClass  	parseInt
-    assign  	JavaObject  	password
-    blur  	JavaPackage  	pkcs11
-    button  	innerHeight  	plugin
-    checkbox  	innerWidth  	prompt
-    clearTimeout  	length  	prototype
-    clientInformation  	link  	radio
-    close  	location  	ref
-    closed  	Math  	reset
-    confirm  	MimeType  	screenX
-    crypto  	name  	screenY
-    date  	navigate  	scroll
-    defaultStatus  	navigator  	secure
-    document  	netscape  	select
-    element  	number  	self
-    escape  	object  	setTimeout
-    eval  	offscreenBuffering  	status
-    event  	onblur  	string
-    fileUpload  	onerror  	submit
-    focus  	onfocus  	sun
-    form  	onload  	taint
-    frame  	onunload  	text
-    frames  	open  	textarea
-    frameRate  	opener  	top
-    function  	option  	toString
-    getClass  	outerHeight  	unescape
-    hidden  	outerWidth  	untaint
-    history  	packages  	valueOf
-    image  	pageXOffset  	window  </p>
+  <p>Конкатенация строк это выражение. Результатом будет одна строка</p>
+  <code>'Привет ' + 'мир' // 'Привет мир'</code>
+
+  <p>Выражение с логическими операторами вернет логическое значение</p>
+  <code>a > b || c !== d</code>
+
+  <p>Вызов функции это выражение. Функция всегда возвращает значение.</p>
+  <code>myFunction(a, b)</code>
+
+  <p>Присваивание значения переменной это выражение. Оно вернет значение переменной.</p>
+  <code>a = 5 // 5</code>
 </article>
+
+
+<!-- Переменная -->
+<article class="article">
+  <div class="anchor" id="variable"></div>
+  <h2>Переменная</h2>
+
+  <p>Переменная сохраняет значение для повторного доступа к этому значению. Переменная это как контейнер, который хранит в себе какое-то значение.</p>
+
+  <hr>
+
+  <h3>Имена переменных</h3>
+
+  <ol>
+    <li>
+      <h4>PascalCase</h4>
+      <p>Так называют типы и классы.</p>
+    </li>
+    <li>
+      <h4>DB_PASSWORD</h4>
+      <p>Так называют константы, которые известны до запуска приложения и не меняются.</p>
+    </li>
+    <li>
+      <h4>camelCase</h4>
+      <p>Так называют переменные и функции.</p>
+    </li>
+  </ol>
+
+  <p>Имена переменных должны быть понятными.</p>
+
+  <hr>
+
+  <h3>Объявление переменных</h3>
+  <p>Способы объявления переменных</p>
+  <ol>
+    <li>
+      <h4>let</h4>
+      <p>Появился в es6.</p> 
+      <ol>
+        <li>
+          <p>Можно сначала создать переменную, а потом присвоить ей значение</p>
+          <code>let abc // создать переменную с именем abc</code>
+          <code>abc = true // присвоить значение true переменной с именем abc</code>
+        </li>
+        <li>
+          <p>Можно выполнить объявление и присваивание в одой строке</p>
+          <code>let abc = true</code>
+        </li>
+        <li>
+          <p>При обращении к переменной, она возвращает свое значени</p>
+          <code>abc // true</code>
+        </li>
+        <li>
+          <p>Если объявить переменную и не присвоить ей значение и обратиться к ней, то она вернет значение undefined, которое туда записал сам js при объявлении переменной.</p>
+          <code>let key</code>
+          <code>key // undefined</code>
+        </li>
+        <li>
+          <p>При попытке обратиться к переменной до ее объявления js выдаст ошибку</p>
+          <code>max // ReferenceError: max is not defined</code>
+          <code>let max</code>
+        </li>
+      </ol>
+    </li>
+    <li>
+      <h4>const</h4>
+      <p>Появился в es6.</p>
+      <ol>
+        <li>
+          <p>При создании константы надо обязательно сразу присвоить ей значение</p>
+          <code>const num = 10 // создать константу num со значением 10</code>
+        </li>
+        <li>
+          <p>При попытке объявить константу без присвоения значения, js выдаст ошибку</p>
+          <code>const min // SyntaxError: Missing initializer in const declaration</code>
+        </li>
+        <li>
+          <p>При попытке перезаписать значение в константе, js выдаст ошибку</p>
+          <code>num = 20 // TypeError: Assignment to constant variable</code>
+        </li>
+        <li>
+          <p>При попытке обратиться к константе до ее объявления js выдаст ошибку</p>
+          <code>max // ReferenceError: max is not defined</code>
+          <code>const max = 200</code>
+        </li>
+      </ol>
+    </li>
+    <li>
+      <h4>var</h4>
+    </li>
+  </ol>
+  
+  <hr>
+
+  <h3>Тип переменной</h3>
+  <p>Тип переменной определяется типом присвоенного значения.</p>
+</article>
+
+
+<!-- Типы данных -->
+<article class="article">
+  <div class="anchor" id="typeof"></div>
+  <h2>Типы данных</h2>
+  
+  <p>В js есть 7 примитивных типов и один ссылочный тип</p>
+
+  <hr>
+
+  <h3>Примитивные типы</h3>
+  <ol>
+    <li>number</li>
+    <li>string</li>
+    <li>boolean</li>
+    <li>null</li>
+    <li>undefined</li>
+    <li>bigint</li>
+    <li>symbol</li>
+  </ol>
+  <p>Если переменной присвоить значение примитивного типа, то переменная будет содержать само значение.</p>
+
+  <hr>
+
+  <h3>Ссылочный тип</h3>
+  <ol>
+    <li>object</li>
+  </ol>
+  <p>Если переменной присвоить значение ссылочного типа, то переменная будет соделжать ссылку на адрес в памяти, где записан сам объект. Объект хранится в области памяти. Объект не хранится в переменной. В переменной хранится только ссылка на область памяти.</p>
+  <p>Можно иметь много разных переменных, которые указывают на один и тот же объект. Если обратиться к любой такой переменной и изменить в объекте любое свойство, то объект изменится во всех переменных, ссылающихся на него.</p>
+
+  <hr>
+
+  <h3>Статическая и динамическая типизация</h3>
+  <p>В языках со статической типизацией при объявлении переменной указывается ее тип. Тип переменной изменить уже нельзя. Он остается постоянный (статичкеским).</p>
+  <p>В языках с динамической типизацией, как в js, при объявлении переменной не нужно указывать ее тип. Переменная принимает тип присвоенного ей значения. Если потом в переменную записать другое значение с другим типом, то тип переменной тоже изменится.</p>
+</article>
+
+
+<!-- Функции -->
+<article class="article">
+  <div class="anchor" id="func"></div>
+  <h2>Функции</h2>
+
+  <p>Рассмотрим разницу между функциями</p>
+  <ol>
+    <li>
+      <h4>Объявленная функция (function declaration)</h4></li>
+    <li>
+      <h4>Функциональное выражение (function expression)</h4>
+    </li>
+    <li>
+      <h4>Стрелочная функция (arrow function)</h4>
+    </li>
+  </ol>
+
+  <h3>Объявленная функция (function declaration)</h3>
+  <p>Создается переменная с именем myFn значением которой является функция.</p>
+<pre>function myFn(a, b) {
+  return a + b;
+}</pre>
+  <p>Впоследствии такую переменную можно перезаписать с другим значением и функция потеряется.</p>
+
+  <h3>Функциональное выражение (function expression)</h3>
+  <p>Функциональное выражение не имеет имени. Оно всегда анонимное.</p>
+<pre>function(a, b) {
+  return a + b;
+}</pre>
+
+  <p>Функциональное выражение можно присвоить переменной и вызывать его через эту переменную.</p>
+<pre>const myFn = function(a, b) {
+  return a + b;
+}</pre>
+<p>Впоследствии такую переменную нельзя перезаписать с другим значением и функция не потеряется.</p>
+
+  <p>Функциональное выражение часто используют в callback функциях.</p>
+<pre>setTimeout(function() {
+  console.log('сообщение');
+}, 1000)</pre>
+
+  <h3>Стрелочная функция (arrow function)</h3>
+  <p>Стрелочная функция не имеет имени. Она всегда анонимная. Для нее не пишется слово function. Начинается со скобок. В скобках пишутся параметры. Если параметров нет, то скобки остаются пустыми. После скобок пишется знак => который похож на стрелку вправо. После идет тело функции.</p>
+<pre>(a, b) => {
+  return a + b;
+}</pre>
+
+  <p>Стрелочную функцию можно присвоить переменной и вызывать ее через эту переменную.</p>
+<pre>const myFn = (a, b) => {
+  return a + b;
+}</pre>
+  <p>Впоследствии такую переменную нельзя перезаписать с другим значением и функция не потеряется.</p>
+
+<p>Стрелочную функцию часто используют в callback функциях.</p>
+<pre>setTimeout( () => {
+  console.log('сообщение');
+}, 1000)</pre>
+
+  <p>Синтаксис стрелочной функции можно сократить.</p>
+  <ul>
+    <li>Если у стрелочной функции только один параметр, то круглые скобки можно опустить.
+      <code>a => { retutn a + a }</code>
+    </li>
+    <li>Если тело стрелочной функции состоит только из одного выражения, то фигурные скобки можно опустить. Стрелочная функция вернет результат этого выражения. Поэтому слово return тоже можно опустить.
+      <code>a => a + a</code>
+    </li>
+  </ul>
+</article>
+
+
+<!-- Обработка ошибок -->
+<article class="article">
+  <div class="anchor" id="error"></div>
+  <h2>Обработка ошибок</h2>
+
+  <p>Мы можем самостоятельно сгенерировать ошибки. Например, бросим ошибку внутри функции</p>
+<pre>function fn() {
+  throw new Error('some error');
+}
+fn() // выполнение кода остановится, поскольку появилась необработанная ошибка</pre>
+
+<h3>Блок try/catch</h3>
+<p>Для обработки ошибок используется блок try/catch. Выполнение кода не останавливается, а продолжается.</p>
+<pre>try {
+  // блок кода в котором может появиться ошибка
+} catch (error) {
+  // блок кода выполнится в случае ошибки в блоке try
+}</pre>
+<pre>try {
+  throw new Error('some error');
+} catch (error) {
+  console.log(error.message); // выведет в консоль 'some error'
+}
+// выполнение кода продолжится, поскольку ошибка обработана</pre>
+</article>
+
+
+<!-- Инструкция (statement) -->
+<article class="article">
+  <div class="anchor" id="statement"></div>
+  <h2>Инструкция (statement)</h2>
+
+  <p>Есть выражение, инструкция и выражение-инструкция</p>
+  <p>Выражение всегда возвращает значение. Например, присваивание значения переменной это выражение.</p>
+  <code>a = 5</code>
+  
+  <p>Инструкция выполняет действие. Например, объявление переменной</p>
+  <code>let a</code>
+
+  <p>Выражение может стать инструкцией и получится выражение-инструкция. Но не наоборот, инструкция не может стать выражением.</p>
+  
+  <h3>Инструкции</h3>
+  <p>Каждую инструкцию надо завершать точкой с запятой. Исключение: после блока инструкций, точка с запятой не требуется. Инструкции надо размещать на разных строках.</p>
+  <p>Объявление переменной это инструкция</p>
+  <code>let a;</code>
+
+  <p>Объявление и инициализация переменной это инструкция</p>
+  <code>let a = 5;</code>
+
+  <p>Конструкция if это инструкция</p>
+<pre>if (a > b) {
+  console.log('a');
+}</pre>
+
+  <p>Конструкция for это инструкция</p>
+<pre>for (let i = 0; i &lt; 5; i++) {
+  console.log(i);
+}</pre>
+
+  <h3>Выражения-инструкции</h3>
+  <p>Строка это выражение. Если после выражения поставить точку с запятой то это станет выражение-инструкция</p>
+  <code>'abc';</code>
+
+  <p>Присваивание это выражение. Если записать присваивание на отдельной строке и поставить точку с запятой то это станет выражение-инструкция.</p>
+  <code>a = a + 3;</code>
+
+  <p>Вызов функции это выражение. Любая функция возвращает значение. Если поставить в конце точку с запятой то она станет выражение-инструкция.</p>
+  <code>myFn(a, b);</code>
+
+  <h3>Отличия выражения от выражения-инструкции</h3>
+  <p>Выражения могут быть использованы как аргументы в вызовах функций</p>
+  <code>myFn(2 + 3);</code>
+  <code>myFn(c = 2 + 3);</code>
+  <p>Иструкции не могут быть использованы как аргументы в вызовах функций. Это приведет к ошибке</p>
+  <code>myFn(let c); // uncaught SyntaxError</code>
+  <code>myFn(c = 2 + 3;); // uncaught SyntaxError</code>
+</article>
+
+
+<!-- Условие (if, switch) -->
+<article class="article">
+  <div class="anchor" id="if"></div>
+  <h2>Условие (if, switch)</h2>
+
+  <ol>
+    <li>if</li>
+    <li>if else</li>
+    <li>if else if</li>
+    <li>switch</li>
+    <li>Тернарный оператор</li>
+  </ol>
+
+  <h3>Инструкция if</h3>
+  <p>Если условие истинно, то выполнится блок кода. Если ложно - то не выполнится.</p>
+<pre>if (условие) {
+  // блок кода
+}</pre>
+
+  <p>Если a больше 1, увеличим а на 1.</p>
+<pre>let a = 5
+if (a > 1) {
+  a += 1
+}</pre>
+
+  <p>Если в объекте a нет свойства с, создадим в объекте а свойство с со значением 2.</p>
+<pre>let a = {b: 1}
+if (!a.c) {
+  a.c = 2
+}</pre>
+
+  <h3>Инструкция if else</h3>
+  <p>Если условие истинно, то выполнится блок кода 1. Если ложно - блок кода 2. Блок кода точно выполнится, но только один из них.</p>
+<pre>if (условие) {
+  // блок кода 1
+} else {
+  // блок кода 2
+}</pre>
+
+  <h3>Инструкция if else if</h3>
+  <p>Сначала проверяется первое условие if. Если условие истинно, то выполнится блок кода 1. Если ложно - проверяется второе условие else if. Если условие истинно, то выполнится блок кода 2. Если ложно - выполнится блок кода 3. Блок кода точно выполнится, но только один из них.</p>
+<pre>if (условие 1) {
+  // блок кода 1
+} else if (условие 2) {
+  // блок кода 2
+} else {
+  // блок кода 3
+}</pre>
+
+  <h3>Инструкция switch</h3>
+  <p>Сначала вычисляется выражение, если результат равен A, то выполнится блок кода 1, если B - блок кода 2. Если нет ни одного совпадения то выполнится блок кода по-умолчанию</p>
+<pre>switch (выражение) {
+  case A:
+    // блок кода 1
+    break;
+  case B:
+    // блок кода 2
+    break;
+  default:
+    // блок кода по-умолчанию
+}</pre>
+
+  <p>Если не записать break, то будут выполняться все блоки кода, пока не встретиться break или пока не закончится switch</p>
+<pre>switch (выражение) {
+  case A:
+    // блок кода 1
+  case B:
+    // блок кода 2
+  default:
+    // блок кода по-умолчанию
+}</pre>
+
+  <h3>Тернарный оператор</h3>
+  <p>У тернарного оператора три операнда. Конструкция с тернарным оператором это выражение. Выражение возвращает значение. Если условие истинно, то возвращается Выражение 1, если ложно - Выражение 2.</p>
+  <code>Условие ? Выражение 1 : Выражение 2</code>
+</article>
+
+
+<!-- Цикл (for, while) -->
+<article class="article">
+  <div class="anchor" id="for"></div>
+  <h2>Цикл (for, while)</h2>
+
+  <ol>
+    <li>for</li>
+    <li>while</li>
+    <li>do while</li>
+    <li>for in для объектов</li>
+    <li>for in для массивов</li>
+    <li>for of</li>
+  </ol>
+
+  <h3>Цикл for</h3>
+<pre>for (let i = 0; i &lt; 5; i++ {
+  console.log(i);
+}</pre>
+
+  <p>Цикл for можно использовать для массивов.</p>
+<pre>const arr = ['A', 'B', 'C']
+  for (let i = 0; i &lt; arr.length; i++ {
+  console.log(arr[i]);
+}</pre>
+
+  <p>Но это не рекомендуется. Рекомендуется использовать функции высшего порядка forEach, map и другие.</p>
+  <p>forEach выполняет действия с каждым элементом массива и возвращает undefined</p>
+<pre>const arr = ['A', 'B', 'C']
+  arr.forEach((element, index, array) => {
+    console.log(element, index);
+})</pre>
+
+  <h3>Цикл while</h3>
+  <p>Сначала проверяется условие. Если условие истинно, то выполняется блок кода. После чего опять проверяется условие.</p>
+<pre>while (условие) {
+  // блок кода
+}</pre>
+<pre>let i = 0
+while (i &lt; 5) {
+  console.log(i)
+  i++
+}</pre>
+  <p>Если условие ложно, то цикл while ни разу не выполнится.</p>
+
+  <h3>Цикл do while</h3>
+  <p>Сначала выполняется блок кода. После чего проверяется условие. Если условие истинно, то опять выполняется блок кода и опять проверяется условие.</p>
+<pre>do {
+  // блок кода
+} while (условие)</pre>
+<pre>let i = 0
+do {
+  console.log(i)
+  i++
+} while (i &lt; 5)</pre>
+  <p>Цикл do while всегда выполнится хотя бы один раз, даже если условие ложно.</p>
+
+  <h3>Цикл for in для объектов</h3>
+  <p>Перебирает все свойства (key) объекта (obj). Перебирает не только собственные свойства, но и унаследованные.</p>
+<pre>for (let key in obj) {
+  // блок кода выполняется для каждого свойства
+}</pre>
+<pre>const obj = {a: 'A', b: 'B', c: 'C'}
+for (let key in obj) {
+  console.log (`${key} : ${obj[key]}`)
+}</pre>
+
+  <p>Для объектов можно использовать методы keys и values, чтобы получить массив ключей и массив значений и работать с этими массивами уже методами массивов. Метод keys возвращает только собственные свойства.</p>
+<pre>const obj = {a: 'A', b: 'B', c: 'C'}
+
+Object.keys(obj).forEach(key => {
+  console.log(key, obj[key])
+})
+
+Object.values(obj).forEach(value => {
+  console.log(value)
+})</pre>
+
+  <h3>Цикл for in для массивов</h3>
+  <p>Циклом for in можно перебрать ключи массива</p>
+<pre>const arr = ['A', 'B', 'C']
+for (let key in arr) {
+  console.log(arr[key])
+}</pre>
+  <p>Но так делать не рекомендуется. Рекомендуется использовать forEach - родной метод массива.</p>
+
+  <h3>Цикл for of</h3>
+  <p>Цмко for of перебирает итерируемые объекты.</p>
+<pre>for (element of iterable) {
+  // блок кода
+}</pre>
+
+  <p>Строка это итерируемый объект. Можно перебирать все символы строки</p>
+<pre>const str = 'abcde'
+for (let char of str) {
+  console.log(char)
+}</pre>
+
+  <p>Циклом for of можно перебрать элементы массива</p>
+<pre>const arr = ['A', 'B', 'C']
+for (let element of arr) {
+  console.log(element)
+}</pre>
+
+  <p>Цикл for of нельзя использовать для объектов.</p>
+</article>
+
