--- a/src/components/code/code-js/js-theory/pages/elem-scope.html
+++ b/src/components/code/code-js/js-theory/pages/elem-scope.html
@@ -42,7 +42,13 @@
   <div class="anchor" id="scope"></div>
   <h2>Область видимости (Scope)</h2>
 
-  <p>Область видимости (scope) определяет доступность переменной, функции или другого ресурса в области твоего кода.</p>
+  <p><strong>Область видимости (scope)</strong> определяет доступность переменной, функции или другого ресурса в разных строчках кода. В js есть 4 области видимости</p>
+  <ol>
+    <li>Глобальная область видимости (Global Scope)</li>
+    <li>Локальная область видимости (Local Scope)</li>
+    <li>Функциональная область видимости (Function Scope)</li>
+    <li>Блочная область видимости (Block Scope)</li>
+  </ol>
 </article>
 
 
