--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
 @import 'scss/_fonts';
 @import 'scss/_global';
 @import 'scss/_page';
+@import 'scss/_container';
 @import 'scss/_color';
 @import 'scss/_nav';
 @import 'scss/_aside';
