--- a/src/components/header/elem-header.html
+++ b/src/components/header/elem-header.html
@@ -1,5 +1,5 @@
-<header class="header header-stick page_dodgerblue">
-  <div class="container">
+<div class="container">
+  <header class="header">
 
     <div class="header__1">
       <div class="header__logo">frontend200tb</div>
@@ -13,5 +13,5 @@
 
     <search-form></search-form>
 
-  </div>
-</header>
+  </header>
+</div>
