--- a/src/components/main/elem-main.html
+++ b/src/components/main/elem-main.html
@@ -1,6 +1,4 @@
-<main>
-  <div class="container">
-    <div id="maincomponent">
-    </div>
-  </div>
-</main>
+<div class="container">
+  <main id="maincomponent">
+  </main>
+</div>
