--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,7 +1,6 @@
 /*********************
 nav
 *********************/
-
 .nav {
   display: flex;
   flex-direction: row;
@@ -9,7 +8,7 @@ nav
   align-items: flex-end;
   flex-wrap: wrap;
   gap: 10px;
-  margin: 10px 0;
+  margin: 0 0 10px 0;
   padding: 10px 0;
   text-align: center;
   border: 5px solid white;
