--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -17,7 +17,7 @@ Page
   flex-direction: column;
   justify-content: flex-start;
   padding: 10px;
-  padding-top: 80px;
+  padding-top: 88px;
   min-height: 100vh;
   min-width: 400px;
 }
@@ -30,9 +30,9 @@ Page
 /*---------------*/
 
 .container {
-  margin: 10px auto 0;
+  margin: 0 auto;
   width: 100%;
-  max-width: 1440px;
+  max-width: 1200px;
 }
 
 a,
